[project]
name = "mask-detect"
version = "0.1.0"
description = "Detect whether the people wear masks."
authors = [
    {name = "Chun-Cheng Yu"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "matplotlib (>=3.10.0,<4.0.0)",
    "opencv-python (>=4.10.0.84,<5.0.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "ultralytics (>=8.3.57,<9.0.0)",
    "numpy (>=1,<2)"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
